--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"> -->
-  <link rel="stylesheet" href="./css/style.min.css?_v=20230826202834">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css?_v=20230826202834" />
-  <script src="./js/app.min.js?_v=20230826202834" defer></script>
+  <link rel="stylesheet" href="./css/style.min.css?_v=20230908002724">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css?_v=20230908002724" />
+  <script src="./js/app.min.js?_v=20230908002724" defer></script>
   <title>Glaz AI</title>
 </head>
 
@@ -392,36 +392,38 @@
 								</div>
 							</div>
 						</div>
-						<div class="how-it-works__tabs tabsSwiper swiper">
-							<div class="swiper-wrapper">
-								<div class="how-it-works__tab how-it-works__tab_active swiper-slide">
-									<span class="how-it-works__tab-index">1</span>
-									<span class="how-it-works__tab-title">Знакомство</span>
-								</div>
-								<div class="how-it-works__tab swiper-slide">
-									<span class="how-it-works__tab-index">2</span>
-									<span class="how-it-works__tab-title">Интеграция</span>
-								</div>
-								<div class="how-it-works__tab swiper-slide">
-									<span class="how-it-works__tab-index">3</span>
-									<span class="how-it-works__tab-title">Тестирование</span>
-								</div>
-								<div class="how-it-works__tab swiper-slide">
-									<span class="how-it-works__tab-index">4</span>
-									<span class="how-it-works__tab-title">Интегрированный набор данных</span>
-								</div>
-								<div class="how-it-works__tab swiper-slide">
-									<span class="how-it-works__tab-index">5 и 6</span>
-									<span class="how-it-works__tab-title">Предоставление данных и&nbsp;анализ</span>
-								</div>
-							</div>							
-						</div>
+						<div class="how-it-works__tabs-cnt">
+							<div class="how-it-works__tabs tabsSwiper swiper">
+								<div class="swiper-wrapper">
+									<div class="how-it-works__tab how-it-works__tab_active swiper-slide">
+										<span class="how-it-works__tab-index">1</span>
+										<span class="how-it-works__tab-title">Знакомство</span>
+									</div>
+									<div class="how-it-works__tab swiper-slide">
+										<span class="how-it-works__tab-index">2</span>
+										<span class="how-it-works__tab-title">Интеграция</span>
+									</div>
+									<div class="how-it-works__tab swiper-slide">
+										<span class="how-it-works__tab-index">3</span>
+										<span class="how-it-works__tab-title">Тестирование</span>
+									</div>
+									<div class="how-it-works__tab swiper-slide">
+										<span class="how-it-works__tab-index">4</span>
+										<span class="how-it-works__tab-title">Интегрированный набор данных</span>
+									</div>
+									<div class="how-it-works__tab swiper-slide">
+										<span class="how-it-works__tab-index">5 и 6</span>
+										<span class="how-it-works__tab-title">Предоставление данных и&nbsp;анализ</span>
+									</div>
+								</div>							
+							</div>
+						</div>						
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="form-section" id="sendRequest">
+		<section class="form-section" id="sendRequest" data-aos="fade" data-aos-duration="1500">
 			<!-- <img class="form-section__glow" src="img/form-glow.png" alt=""> -->
 
 			<div class="form-section__wrapper wrapper">
